--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,10 @@
             <scope>test</scope>							  			
        </dependency>
   </dependencies>
+<properties>
+   <maven.compiler.source>1.8</maven.compiler.source>
+   <maven.compiler.target>1.8</maven.compiler.target>
+ </properties>
   <build>
     <plugins>
 <plugin>
@@ -57,7 +61,7 @@
  			 <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.7.1.201405082137</version>
+        <version>0.8.5</version>
         <executions>
             <execution>
                 <id>default-prepare-agent</id>
