--- a/pods.yaml
+++ b/pods.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-kind: Pod
+kind: Deployment
 metadata:
   name: nodeapp
   labels:
@@ -11,4 +11,4 @@ spec:
       - name: nodeapp
         image: vishnu95/test:latest
         ports:
-           - containerPort: 8080
+           - containerPort: 9898
