--- a/service.yaml
+++ b/service.yaml
@@ -1,12 +1,11 @@
-kind: Service
 apiVersion: v1
+kind: Service
 metadata:
-  name: nodeapp
+  name: java-app-svc
 spec:
-  selector:
-    app: nodeapp
-  ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 8080
   type: LoadBalancer
+  ports:
+  - port: 80
+    targetPort: 8080
+  selector:
+    app: java-app
